--- a/drone-app/src/input.output.css
+++ b/drone-app/src/input.output.css
@@ -592,20 +592,12 @@ video {
   visibility: visible;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
 
 .relative {
   position: relative;
-}
-
-.sticky {
-  position: sticky;
 }
 
 .inset-0 {
@@ -620,20 +612,8 @@ video {
   right: 0px;
 }
 
-.right-6 {
-  right: 1.5rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
 .top-1\/2 {
   top: 50%;
-}
-
-.top-\[70px\] {
-  top: 70px;
 }
 
 .z-10 {
@@ -642,14 +622,6 @@ video {
 
 .z-20 {
   z-index: 20;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
-.z-50 {
-  z-index: 50;
 }
 
 .col-span-full {
@@ -730,14 +702,6 @@ video {
   aspect-ratio: 16 / 9;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
 .h-16 {
   height: 4rem;
 }
@@ -748,6 +712,10 @@ video {
 
 .h-8 {
   height: 2rem;
+}
+
+.h-\[180px\] {
+  height: 180px;
 }
 
 .h-\[224px\] {
@@ -776,14 +744,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[220px\] {
-  height: 220px;
-}
-
-.h-\[180px\] {
-  height: 180px;
 }
 
 .min-h-screen {
@@ -830,6 +790,10 @@ video {
   max-width: 72rem;
 }
 
+.max-w-\[1600px\] {
+  max-width: 1600px;
+}
+
 .max-w-\[277px\] {
   max-width: 277px;
 }
@@ -846,14 +810,6 @@ video {
   max-width: 500px;
 }
 
-.max-w-\[1400px\] {
-  max-width: 1400px;
-}
-
-.max-w-\[1600px\] {
-  max-width: 1600px;
-}
-
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -861,10 +817,6 @@ video {
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.cursor-pointer {
-  cursor: pointer;
 }
 
 .resize {
@@ -911,10 +863,6 @@ video {
   gap: 3rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
 }
@@ -927,6 +875,10 @@ video {
   gap: 8px;
 }
 
+.gap-\[16px\] {
+  gap: 16px;
+}
+
 .gap-y-6 {
   row-gap: 1.5rem;
 }
@@ -935,12 +887,6 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .space-y-16 > :not([hidden]) ~ :not([hidden]) {
@@ -979,17 +925,8 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-t-lg {
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
 }
 
 .border {
@@ -1081,11 +1018,6 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .py-6 {
@@ -1199,12 +1131,6 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-opacity {
   transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1213,10 +1139,6 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ease-out {
@@ -1257,13 +1179,13 @@ video {
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .sm\:gap-\[20px\] {
+    gap: 20px;
+  }
 }
 
 @media (min-width: 768px) {
-  .md\:static {
-    position: static;
-  }
-
   .md\:absolute {
     position: absolute;
   }
@@ -1275,10 +1197,6 @@ video {
 
   .md\:bottom-\[48px\] {
     bottom: 48px;
-  }
-
-  .md\:mr-\[100px\] {
-    margin-right: 100px;
   }
 
   .md\:block {
@@ -1345,16 +1263,12 @@ video {
     gap: 10rem;
   }
 
+  .md\:gap-\[24px\] {
+    gap: 24px;
+  }
+
   .md\:gap-y-0 {
     row-gap: 0px;
-  }
-
-  .md\:bg-transparent {
-    background-color: transparent;
-  }
-
-  .md\:p-0 {
-    padding: 0px;
   }
 
   .md\:px-8 {
@@ -1372,21 +1286,12 @@ video {
     padding-bottom: 5rem;
   }
 
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
   .md\:text-center {
     text-align: center;
   }
 
   .md\:text-\[16px\] {
     font-size: 16px;
-  }
-
-  .md\:text-\[18px\] {
-    font-size: 18px;
   }
 
   .md\:text-\[38px\] {
@@ -1434,15 +1339,6 @@ video {
   .lg\:px-\[200px\] {
     padding-left: 200px;
     padding-right: 200px;
-  }
-
-  .lg\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
-  }
-
-  .lg\:pl-\[100px\] {
-    padding-left: 100px;
   }
 
   .lg\:text-left {
